# chadlibc

./: .clang-format  .editorconfig  .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  compile_flags.txt  configure  configure.ac
.github/workflows/: ci.yml  codeql-analysis.yml  commitlint.yml
build-aux/: gen-version
include/: ctype.h  errno.h  features.h  float.h  limits.h  locale.h  math.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h
include/chadlibc/: ansi-sysdeps.h
include/sys/: cdefs.h
include/x86_64/bits/: alltypes.h
libc/: Makefile.am  ctype.c  entry.c  errno.c
libc/locale/: ctype_local.h  setlocale_local.h
libc/signal/: Makefile.am  signal.c
libc/stdlib/: Makefile.am  abort.c  abs.c  atexit.c  div.c  exit.c  getenv.c  labs.c  ldiv.c  rand.c  strtod.c  strtoul.c
libc/string/: Makefile.am  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strrchr.c  strspn.c  strxfrm.c
libc/sysdeps/: Makefile.am
libc/sysdeps/linux/i386/: crt0.S
libc/sysdeps/linux/x86_64/: crt0.S  generic.c
libc/sysdeps/linux/x86_64/include/abi/: limits.h
libm/: Makefile.am  cosf.c  libm.h  sincosf.c  sinf.c  sqrt.c  tanf.c
src/: build.mk  ctype.c  entry.c  math.c
src/math/: build.mk  ceil.c  fabs.c  floor.c  fmod.c
src/signal/: build.mk  signal.c
src/stdio/: vsprintf.c
src/stdlib/: abort.c  abs.c  atexit.c  build.mk  div.c  exit.c  getenv.c  ldiv.c  rand.c  strtod.c
src/string/: build.mk  cat.c  cmp.c  memcmp.c  memcpy.c  memmove.c  memset.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncmp.c  strncpy.c  strrchr.c  strspn.c
sysdeps/linux/x86_32/: crt0.S
sysdeps/linux/x86_64/: build.mk  crt0.S  generic.c
sysdeps/seac/: crt0.S  crt0.s
test/: Makefile.am  build.mk  crt0.c  test_abort.c  test_ctype.c  test_getenv.c  test_signal.c  test_strcat.c  test_strchr.c  test_strcmp.c  test_strcpy.c  test_strcspn.c  test_strlen.c  test_strncat.c  test_strncmp.c  test_strrchr.c  test_strspn.c  test_strtod.c  test_strtoul.c  testsuite.sh
