libc_a_SOURCES	+= string/memcmp.c \
				 string/memcpy.c \
				 string/memmove.c \
				 string/memset.c \
				 string/strcat.c \
				 string/strcpy.c \
				 string/strlen.c \
				 string/strcmp.c \
				 string/strncpy.c \
				 string/strncat.c \
				 string/strncmp.c \
				 string/strrchr.c \
				 string/strchr.c \
				 string/strspn.c \
				 string/strcspn.c
